Clean up disk views, including index and form. Still needs work.

--- a/app/views/disks/index.html.erb
+++ b/app/views/disks/index.html.erb
@@ -57,6 +57,6 @@
 				</div>
 	<% end %>
 <% else %>
-				<p>There are no disks to display.</p>
+				<p class="subheader subheader--padded">There are no disks to display.</p>
 <% end %>
 			</article>
