--- a/app/views/disks/_form.html.erb
+++ b/app/views/disks/_form.html.erb
@@ -1,55 +1,93 @@
-				<%= form_for @disk do |f| %>
+				<%= form_for @disk, html: { novalidate: true } do |f| %>
 <% if @disk.errors.any? %>
 	<% @disk.errors.full_messages.each do |msg| %>
 					<p><%= msg %></p>
 	<% end %>
 <% end %>
-					<fieldset>
-						<p class="textField">
-							<%= f.label :name, "Disk Name" %>
-							<span class="required"> *</span><br>
-							<%= f.text_field :name, placeholder: "hg80ua", required: true %>
-						</p>
-						<p class="textField">
-							<%= f.label :capacity, "Capacity (in GB)" %>
-							<span class="required"> *</span><br>
-							<%= f.text_field :capacity, placeholder: "8000", required: true %>
-						</p>
-						<p class="textField">
-							<%= f.label :format, "Format (ex. HDD, SSD)" %>
-							<span class="required"> *</span><br>
-							<%= f.text_field :format, placeholder: "HDD", required: true %>
-						</p>
+					<div class="fieldSet">
+						<div class="fieldSet-column">
+							<p class="subheader">Required Information</p>
 
-						<p class="textField">
-							<%= f.label :manufacturer %><br>
-							<%= f.text_field :manufacturer, placeholder: "HGST" %>
-						</p>
-						<p class="textField">
-							<%= f.label :serial_number %>
-							<span class="required"> *</span><br>
-							<%= f.text_field :serial_number, placeholder: "2EG20GDG", required: true %>
-						</p>
-						<p class="textField">
-							<%= f.label :part_number, "Part or Model Number" %><br>
-							<%= f.text_field :part_number, placeholder: "HUH728080ALE600" %>
-						</p>
+							<div class="textField <%= "has-error" if @disk.errors.include? :name %>">
+								<%= f.label :name, "Disk Name", class: "is-required" %>
+								<%= f.text_field :name, placeholder: "hg80ua", required: true, autofocus: true %>
+<% if @disk.errors.include? :name %>
+								<div class="textField-error"><%= @disk.errors.full_messages_for(:name).first %></div>
+<% end %>
+							</div>
 
-						<p class="textField">
-							<%= f.label :usage %><br>
-							<%= f.text_field :usage, placeholder: "/b1" %>
-						</p>
-						<p class="textField">
-							<%= f.label :warranty_exp %><br>
-							<%= f.date_field :warranty_exp, placeholder: "November 2017" %>
-						</p>
-						<p class="textField">
-							<%= f.label :notes %><br>
-							<%= f.text_area :notes %>
-						</p>
+							<div class="textField <%= "has-error" if @disk.errors.include? :capacity %>">
+								<%= f.label :capacity, "Capacity (in GB)", class: "is-required" %>
+								<%= f.text_field :capacity, placeholder: "8000", required: true %>
+<% if @disk.errors.include? :capacity %>
+								<div class="textField-error"><%= @disk.errors.full_messages_for(:capacity).first %></div>
+<% end %>
+							</div>
 
-						<p>
-							<%= f.submit %>
-						</p>
-					</fieldset>
+							<div class="textField <%= "has-error" if @disk.errors.include? :format %>">
+								<%= f.label :format, "Format (ex. HDD, SSD)", class: "is-required" %>
+								<%= f.text_field :format, placeholder: "HDD", required: true %>
+<% if @disk.errors.include? :format %>
+								<div class="textField-error"><%= @disk.errors.full_messages_for(:format).first %></div>
+<% end %>
+							</div>
+
+							<div class="textField <%= "has-error" if @disk.errors.include? :serial_number %>">
+								<%= f.label :serial_number, "Serial Number", class: "is-required" %>
+								<%= f.text_field :serial_number, placeholder: "2EG20GDG", required: true %>
+<% if @disk.errors.include? :serial_number %>
+								<div class="textField-error"><%= @disk.errors.full_messages_for(:serial_number).first %></div>
+<% end %>
+							</div>
+
+						</div>
+						
+						<div class="fieldSet-column">
+							<p class="subheader">Other Information</p>
+
+							<div class="textField <%= "has-error" if @disk.errors.include? :manufacturer %>">
+								<%= f.label :manufacturer, "Manufacturer" %>
+								<%= f.text_field :manufacturer, placeholder: "HGST" %>
+<% if @disk.errors.include? :manufacturer %>
+								<div class="textField-error"><%= @disk.errors.full_messages_for(:manufacturer).first %></div>
+<% end %>
+							</div>
+
+							<div class="textField <%= "has-error" if @disk.errors.include? :part_number %>">
+								<%= f.label :part_number, "Part or Model Number" %>
+								<%= f.text_field :part_number, placeholder: "HUH728080ALE600" %>
+<% if @disk.errors.include? :part_number %>
+								<div class="textField-error"><%= @disk.errors.full_messages_for(:part_number).first %></div>
+<% end %>
+							</div>
+
+							<div class="textField <%= "has-error" if @disk.errors.include? :usage %>">
+								<%= f.label :usage %>
+								<%= f.text_field :usage, placeholder: "/b1" %>
+<% if @disk.errors.include? :usage %>
+								<div class="textField-error"><%= @disk.errors.full_messages_for(:usage).first %></div>
+<% end %>
+							</div>
+
+							<div class="textField <%= "has-error" if @disk.errors.include? :warranty_exp %>">
+								<%= f.label :warranty_exp, "Warranty Expiration" %>
+								<%= f.date_field :warranty_exp, placeholder: "November 2017" %>
+<% if @disk.errors.include? :warranty_exp %>
+								<div class="textField-error"><%= @disk.errors.full_messages_for(:warranty_exp).first %></div>
+<% end %>
+							</div>
+
+							<div class="textField <%= "has-error" if @disk.errors.include? :notes %>">
+								<%= f.label :notes %>
+								<%= f.text_area :notes %>
+<% if @disk.errors.include? :notes %>
+								<div class="textField-error"><%= @disk.errors.full_messages_for(:notes).first %></div>
+<% end %>
+							</div>
+						</div>
+					</div>
+
+					<div>
+						<%= f.submit "Done", class: "button button--first", title: "Submit" %>
+					</div>
 				<% end %>
