Change 'disk' to 'drive' throughout the project.

--- a/app/views/drives/edit.html.erb
+++ b/app/views/drives/edit.html.erb
@@ -1,4 +1,4 @@
-<% page_title "Editing #{@disk.name}" %>
+<% page_title "Editing #{@drive.name}" %>
 			<article class="focus focus--top">
 <%= render 'form' %>
 			</article>
