--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -19,10 +19,10 @@
 				<li><%= link_to "Add Machine", new_machine_path, class: "lnb", title: "Add Machine" %></li>
 			</ul>
 
-			<p class="twb mbs">Disks</p>
+			<p class="twb mbs">Drives</p>
 			<ul class="lsn">
-				<li><%= link_to "View Disks", disks_path, class: "lnb", title: "Disk Index" %></li>
-				<li><%= link_to "Add Disk", new_disk_path, class: "lnb", title: "Add Disk" %></li>
+				<li><%= link_to "View Drives", drives_path, class: "lnb", title: "Drive Index" %></li>
+				<li><%= link_to "Add Drives", new_drive_path, class: "lnb", title: "Add Drive" %></li>
 			</ul>
 
 			<p class="twb mbs">Users</p>
