--- a/app/views/drives/new.html.erb
+++ b/app/views/drives/new.html.erb
@@ -1,4 +1,4 @@
-<% page_title "Register New Disk" %>
+<% page_title "Register New Drive" %>
 			<article class="focus focus--top">
 <%= render 'form' %>
 			</article>
