--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,35 +2,35 @@
 			<article class="focus focus--top">
 				<%= form_for resource, as: resource_name, url: registration_path(resource_name), html: {novalidate: true} do |f| %>
 
-					<div class="textField <%= "has-error" if resource.errors.include? :name %>">
+					<div class="field field--text <%= "has-error" if resource.errors.include? :name %>">
 						<%= f.label :name, "Your Name", class: "is-required" %>
 						<%= f.text_field :name, placeholder: "Rob", required: true, autofocus: true %>
 <% if resource.errors.include? :name %>
-						<div class="textField-error"><%= resource.errors.full_messages_for(:name).first %></div>
+						<div class="field field--text-error"><%= resource.errors.full_messages_for(:name).first %></div>
 <% end %>
 					</div>
 
-					<div class="textField <%= "has-error" if resource.errors.include? :email %>">
+					<div class="field field--text <%= "has-error" if resource.errors.include? :email %>">
 						<%= f.label :email, "Your Email", class: "is-required" %>
 						<%= f.email_field :email, placeholder: "rob@example.com", autofocus: true %>
 <% if resource.errors.include? :email %>
-						<div class="textField-error"><%= resource.errors.full_messages_for(:email).first %></div>
+						<div class="field field--text-error"><%= resource.errors.full_messages_for(:email).first %></div>
 <% end %>
 					</div>
 
-					<div class="textField <%= "has-error" if resource.errors.include? :password %>">
+					<div class="field field--text <%= "has-error" if resource.errors.include? :password %>">
 						<%= f.label :password, "Your Password", class: "is-required" %>
 						<%= f.password_field :password, placeholder: "8 Characters Minimum", autocomplete: "off" %>
 <% if resource.errors.include? :password %>
-								<div class="textField-error"><%= resource.errors.full_messages_for(:password).first %></div>
+								<div class="field field--text-error"><%= resource.errors.full_messages_for(:password).first %></div>
 <% end %>
 					</div>
 
-					<div class="textField <%= "has-error" if resource.errors.include? :password_confirmation %>">
+					<div class="field field--text <%= "has-error" if resource.errors.include? :password_confirmation %>">
 						<%= f.label :password_confirmation, "Confirm Password", class: "is-required" %>
 						<%= f.password_field :password_confirmation, autocomplete: "off" %>
 <% if resource.errors.include? :password_confirmation %>
-						<div class="textField-error"><%= resource.errors.full_messages_for(:password_confirmation).first %></div>
+						<div class="field field--text-error"><%= resource.errors.full_messages_for(:password_confirmation).first %></div>
 <% end %>
 					</div>
 
