--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -22,7 +22,7 @@
 			<p class="twb mbs">Drives</p>
 			<ul class="lsn">
 				<li><%= link_to "View Drives", drives_path, class: "lnb", title: "Drive Index" %></li>
-				<li><%= link_to "Add Drives", new_drive_path, class: "lnb", title: "Add Drive" %></li>
+				<li><%= link_to "Add Drive", new_drive_path, class: "lnb", title: "Add Drive" %></li>
 			</ul>
 
 			<p class="twb mbs">Users</p>
