--- a/app/views/machines/manage_ex_attrs.html.erb
+++ b/app/views/machines/manage_ex_attrs.html.erb
@@ -17,7 +17,7 @@
 				<div class="divider"></div>
 				<p class="subheader">Add Property</p>
 				<%= form_for ExtendedAttribute.new do |f| %>
-					<div class="textField">
+					<div class="field field--text">
 						<%= f.label :name, "Name" %>
 						<%= f.text_field :name, placeholder: "New Attribute" %>
 					</div>
