--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,23 +32,23 @@
 						<div class="fieldSet-column">
 							<p class="subheader">Edit User</p>
 
-							<div class="textField <%= "has-error" if @user.errors.include? :name %>">
+							<div class="field field--text <%= "has-error" if @user.errors.include? :name %>">
 								<%= f.label :name, "Name", class: "is-required" %>
 								<%= f.text_field :name, placeholder: "Rob", required: true, autofocus: true %>
 <% if @user.errors.include? :name %>
-								<div class="textField-error"><%= @user.errors.full_messages_for(:name).first %></div>
+								<div class="field field--text-error"><%= @user.errors.full_messages_for(:name).first %></div>
 <% end %>
 							</div>
 
-							<div class="textField <%= "has-error" if @user.errors.include? :email %>">
+							<div class="field field--text <%= "has-error" if @user.errors.include? :email %>">
 								<%= f.label :email, "Email", class: "is-required" %>
 								<%= f.email_field :email, placeholder: "rob@example.com", required: true %>
 <% if @user.errors.include? :email %>
-								<div class="textField-error"><%= @user.errors.full_messages_for(:email).first %></div>
+								<div class="field field--text-error"><%= @user.errors.full_messages_for(:email).first %></div>
 <% end %>
 							</div>
 
-							<div class="textField">
+							<div class="field">
 								<%= f.label :send_alerts, "Send Alerts" %>
 								<%= f.check_box :send_alerts %>
 								Send email alerts to this user?
@@ -58,19 +58,19 @@
 						<div class="fieldSet-column">
 							<p class="subheader">Change Password</p>
 
-							<div class="textField <%= "has-error" if @user.errors.include? :password %>">
+							<div class="field field--text <%= "has-error" if @user.errors.include? :password %>">
 								<%= f.label :password, "New Password" %>
 								<%= f.password_field :password, placeholder: "8 Characters Minimum" %>
 <% if @user.errors.include? :password %>
-								<div class="textField-error"><%= @user.errors.full_messages_for(:password).first %></div>
+								<div class="field field--text-error"><%= @user.errors.full_messages_for(:password).first %></div>
 <% end %>
 							</div>
 
-							<div class="textField <%= "has-error" if @user.errors.include? :password_confirmation %>">
+							<div class="field field--text <%= "has-error" if @user.errors.include? :password_confirmation %>">
 								<%= f.label :password_confirmation, "Confirm New Password" %>
 								<%= f.password_field :password_confirmation %>
 <% if @user.errors.include? :password_confirmation %>
-								<div class="textField-error"><%= @user.errors.full_messages_for(:password_confirmation).first %></div>
+								<div class="field field--text-error"><%= @user.errors.full_messages_for(:password_confirmation).first %></div>
 <% end %>
 							</div>
 						</div>
