--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -3,19 +3,19 @@
 				<%= form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :put, novalidate: true } do |f| %>
 					<%= f.hidden_field :reset_password_token %>
 
-					<div class="textField <%= "has-error" if resource.errors.include? :password %>">
+					<div class="field field--text <%= "has-error" if resource.errors.include? :password %>">
 						<%= f.label :password, "New Password" %>
 						<%= f.password_field :password, placeholder: "8 Characters Minimum", required: true, autofocus: true, autocomplete: "off" %>
 <% if resource.errors.include? :password %>
-						<div class="textField-error"><%= resource.errors.full_messages_for(:password).first %></div>
+						<div class="field field--text-error"><%= resource.errors.full_messages_for(:password).first %></div>
 <% end %>
 					</div>
 
-					<div class="textField <%= "has-error" if resource.errors.include? :password_confirmation %>">
+					<div class="field field--text <%= "has-error" if resource.errors.include? :password_confirmation %>">
 						<%= f.label :password_confirmation, "Confirm Password" %>
 						<%= f.password_field :password_confirmation, required: true, autocomplete: "off" %>
 <% if resource.errors.include? :password_confirmation %>
-						<div class="textField-error"><%= resource.errors.full_messages_for(:password_confirmation).first %></div>
+						<div class="field field--text-error"><%= resource.errors.full_messages_for(:password_confirmation).first %></div>
 <% end %>
 					</div>
 
