--- a/app/views/drives/_form.html.erb
+++ b/app/views/drives/_form.html.erb
@@ -40,8 +40,23 @@
 <% end %>
 							</div>
 
+							<div class="divider"></div>
+							<p class="subheader">Usage Information</p>
+
+							<div class="field">
+								<%= f.label :machine %>
+								<%= f.collection_select :machine_id, Machine.all, :id, :name, include_blank: "Select:" %>
+							</div>
+
+							<div class="field field--text <%= "has-error" if @drive.errors.include? :usage %>">
+								<%= f.label :usage %>
+								<%= f.text_field :usage, placeholder: "/b1" %>
+<% if @drive.errors.include? :usage %>
+								<div class="field field--text-error"><%= @drive.errors.full_messages_for(:usage).first %></div>
+<% end %>
+							</div>
 						</div>
-						
+
 						<div class="fieldSet-column">
 							<p class="subheader">Other Information</p>
 
@@ -61,14 +76,6 @@
 <% end %>
 							</div>
 
-							<div class="field field--text <%= "has-error" if @drive.errors.include? :usage %>">
-								<%= f.label :usage %>
-								<%= f.text_field :usage, placeholder: "/b1" %>
-<% if @drive.errors.include? :usage %>
-								<div class="field field--text-error"><%= @drive.errors.full_messages_for(:usage).first %></div>
-<% end %>
-							</div>
-
 							<div class="field field--text <%= "has-error" if @drive.errors.include? :warranty_exp %>">
 								<%= f.label :warranty_exp, "Warranty Expiration" %>
 								<%= f.date_field :warranty_exp, placeholder: "November 2017" %>
@@ -77,7 +84,7 @@
 <% end %>
 							</div>
 
-							<div class="field field--text <%= "has-error" if @drive.errors.include? :notes %>">
+							<div class="field field--textarea <%= "has-error" if @drive.errors.include? :notes %>">
 								<%= f.label :notes %>
 								<%= f.text_area :notes %>
 <% if @drive.errors.include? :notes %>
