Add working field for warranty expiration. Chose to change this into a date object within the drive_params method. Is there a better way to do this?

--- a/app/views/drives/_form.html.erb
+++ b/app/views/drives/_form.html.erb
@@ -78,7 +78,7 @@
 
 							<div class="field field--text <%= "has-error" if @drive.errors.include? :warranty_exp %>">
 								<%= f.label :warranty_exp, "Warranty Expiration" %>
-								<%= f.date_field :warranty_exp, placeholder: "November 2017" %>
+								<%= f.text_field :warranty_exp, placeholder: "mm/dd/yyyy", value: @drive.warranty_exp.present? ? @drive.warranty_exp.strftime("%m/%d/%Y") : "" %>
 <% if @drive.errors.include? :warranty_exp %>
 								<div class="field field--text-error"><%= @drive.errors.full_messages_for(:warranty_exp).first %></div>
 <% end %>
