--- a/app/views/drives/show.html.erb
+++ b/app/views/drives/show.html.erb
@@ -60,7 +60,7 @@
 <% if @drive.warranty_exp.present? %>
 					<div class="list-item">
 						<span class="list-key">Warranty Exp.</span>
-						<span class="list-value"><%= @drive.warranty_exp.strftime("%-m/%-d/%y") %></span>
+						<span class="list-value"><%= @drive.warranty_exp.strftime("%-m/%-d/%Y") %></span>
 					</div>
 <% end %>
 					<div class="list-item">
