Remove most mentions of hstore and other db issues.

--- a/app/views/machines/_form.html.erb
+++ b/app/views/machines/_form.html.erb
@@ -33,7 +33,7 @@
 							</div>
 						</div>
 
-						<div class="fieldSet-column">
+						<!-- <div class="fieldSet-column">
 							<p class="subheader">Extended Attributes</p>
 <%= f.fields_for :info do |i| %>
 	<% for ex_attr in @ex_attrs %>
@@ -43,7 +43,7 @@
 							</div>
 	<% end %>
 <% end %>
-						</div>
+						</div> -->
 					</div>
 
 					<div>
