--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -11,7 +11,7 @@
 
 				<p class="subheader">Location</p>
 				<p><%= @machine.nice_location %></p>
-<% unless @machine.info.blank? %>
+<!-- <% unless @machine.info.blank? %>
 				<div class="divider"></div>
 				<div class="list">
 	<% @machine.info.sort.each do |key, value| %>
@@ -21,7 +21,7 @@
 					</div>
 	<% end %>
 				</div>
-<% end %>
+<% end %> -->
 
 <% if @machine.drives.any? %>
 				<div class="divider"></div>
